// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Debug Tests Suite > SHould render objects,nested	objects and nested arrays 1`] = `
<div>
  <div>
    <ul>
      <li>
        <h1>
          nameNormalObject
        </h1>
        <p>
          any_value
        </p>
      </li>
      <li>
        <h1>
          nestedObject
        </h1>
        <ul>
          <li>
            <h1>
              nameNestedObj
            </h1>
            <p>
              any_value
            </p>
          </li>
        </ul>
      </li>
      <li>
        <h1>
          nestedArray
        </h1>
        <ul>
          <li>
            <h1>
              0
            </h1>
            <ul>
              <li>
                <h1>
                  nameNestedArray
                </h1>
                <p>
                  any_value
                </p>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Debug Tests Suite > Should prevent null	or undefined 1`] = `
<div>
  <div>
    <ul>
      <li>
        <h1>
          nameNormalObject
        </h1>
        <p>
          any_value
        </p>
      </li>
      <li>
        <h1>
          attrNull
        </h1>
        <p>
          null
        </p>
      </li>
      <li>
        <h1>
          attrUndefined
        </h1>
        <p>
          undefined
        </p>
      </li>
    </ul>
  </div>
</div>
`;
